--- a/app/src/main/res/layout-hdpi/activity_login.xml
+++ b/app/src/main/res/layout-hdpi/activity_login.xml
@@ -679,7 +679,7 @@
                 android:orientation="vertical"
                 android:visibility="gone">
 
-                <LinearLayout
+                <ImageView
                     android:id="@+id/layoutEnableUAEPass"
                     android:layout_width="220dp"
                     android:layout_height="32dp"
@@ -689,7 +689,7 @@
                     android:gravity="center_vertical|center_horizontal"
                     android:orientation="horizontal"
 
-                    android:visibility="visible">
+                    android:visibility="visible"/>
 
                     <TextView
                         android:id="@+id/txtLoginwith"
@@ -707,7 +707,7 @@
                         android:text="@string/login_with"
                         android:textColor="@color/black"
                         android:textSize="14sp"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
 
                     <ImageView
                         android:id="@+id/imgUAEPass"
@@ -718,7 +718,8 @@
                         android:padding="6dp"
                         android:scaleType="fitXY"
                         android:layout_weight="1.25"
-                        android:src="@drawable/uaepass" />
+                        android:src="@drawable/uaepass"
+                        android:visibility="gone"/>
 
                     <TextView
                         android:id="@+id/txtUAEPass"
@@ -731,12 +732,9 @@
                         android:text="@string/with_uaepass"
                         android:layout_weight=".90"
                         android:textAlignment="viewStart"
-
-
                         android:textColor="@color/black"
                         android:textSize="14sp"
-                        android:visibility="visible" />
-                </LinearLayout>
+                        android:visibility="gone" />
 
                 <LinearLayout
                     android:id="@+id/layoutUaeOR"
@@ -796,7 +794,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textSize="17sp" />
+                    android:textSize="17dp" />
 
                 <dm.sime.com.kharetati.view.customview.SwitchCompatEx
                     android:id="@+id/switchLanguageUae"
