--- a/app/src/main/res/layout-mdpi/activity_login.xml
+++ b/app/src/main/res/layout-mdpi/activity_login.xml
@@ -677,7 +677,7 @@
                 android:orientation="vertical"
                 android:visibility="gone">
 
-                <LinearLayout
+                <ImageView
                     android:id="@+id/layoutEnableUAEPass"
                     android:layout_width="260dp"
                     android:layout_height="44dp"
@@ -688,7 +688,7 @@
                     android:gravity="center_vertical|center_horizontal"
                     android:orientation="horizontal"
 
-                    android:visibility="visible">
+                    android:visibility="visible"/>
 
                     <TextView
                         android:id="@+id/txtLoginwith"
@@ -706,7 +706,7 @@
                         android:text="@string/login_with"
                         android:textColor="@color/black"
                         android:textSize="18sp"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
 
                     <ImageView
                         android:id="@+id/imgUAEPass"
@@ -717,7 +717,8 @@
                         android:padding="7dp"
                         android:scaleType="fitXY"
                         android:layout_weight="1.25"
-                        android:src="@drawable/uaepass" />
+                        android:src="@drawable/uaepass"
+                        android:visibility="gone"/>
 
                     <TextView
                         android:id="@+id/txtUAEPass"
@@ -734,8 +735,8 @@
 
                         android:textColor="@color/black"
                         android:textSize="18sp"
-                        android:visibility="visible" />
-                </LinearLayout>
+                        android:visibility="gone" />
+
 
                 <LinearLayout
                     android:id="@+id/layoutUaeOR"
@@ -795,7 +796,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textSize="22sp" />
+                    android:textSize="22dp" />
 
                 <dm.sime.com.kharetati.view.customview.SwitchCompatEx
                     android:id="@+id/switchLanguageUae"
