--- a/app/src/main/res/layout-xhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xhdpi/activity_login.xml
@@ -676,7 +676,7 @@
                 android:orientation="vertical"
                 android:visibility="gone">
 
-                <LinearLayout
+                <ImageView
                     android:id="@+id/layoutEnableUAEPass"
                     android:layout_width="300dp"
                     android:layout_height="40dp"
@@ -686,7 +686,7 @@
                     android:gravity="center_vertical|center_horizontal"
                     android:orientation="horizontal"
 
-                    android:visibility="visible">
+                    android:visibility="visible"/>
 
                     <TextView
                         android:id="@+id/txtLoginwith"
@@ -706,7 +706,7 @@
                         android:text="@string/login_with"
                         android:textColor="@color/black"
                         android:textSize="14sp"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
 
                     <ImageView
                         android:id="@+id/imgUAEPass"
@@ -717,7 +717,8 @@
                         android:padding="6dp"
                         android:scaleType="fitXY"
                         android:layout_weight="1.3"
-                        android:src="@drawable/uaepass" />
+                        android:src="@drawable/uaepass"
+                        android:visibility="gone"/>
 
                     <TextView
                         android:id="@+id/txtUAEPass"
@@ -735,8 +736,7 @@
 
                         android:textColor="@color/black"
                         android:textSize="14sp"
-                        android:visibility="visible" />
-                </LinearLayout>
+                        android:visibility="gone" />
 
                 <LinearLayout
                     android:id="@+id/layoutUaeOR"
@@ -796,7 +796,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textSize="17sp" />
+                    android:textSize="17dp" />
 
                 <dm.sime.com.kharetati.view.customview.SwitchCompatEx
                     android:id="@+id/switchLanguageUae"
