--- a/app/src/main/res/layout-xxhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_login.xml
@@ -657,7 +657,7 @@
                 android:src="@drawable/uaelogin_en"
                 android:gravity="center_vertical|center_horizontal"
                 android:orientation="horizontal"
-
+                android:layout_marginBottom="-8dp"
                 android:visibility="visible"/>
 
                 <TextView
