--- a/app/src/main/res/layout/fragment_attachment.xml
+++ b/app/src/main/res/layout/fragment_attachment.xml
@@ -264,8 +264,7 @@
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="75dp"
-              android:layout_marginBottom="15dp"
-              android:layoutDirection="locale">
+              android:layout_marginBottom="15dp">
 
             <ImageView
                 android:id="@+id/img_company_license"
