--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -43,13 +43,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="start"
-                    android:layout_weight="1.25">
+                    android:layout_weight="1.35">
                     <ImageView
                         android:id="@+id/imgBack"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="15dp"
                         android:layout_marginEnd="50dp"
+                        android:visibility="gone"
                         android:gravity="start"
                         android:src="@drawable/ic_arrow_white"/>
                 </LinearLayout>
