--- a/app/src/main/res/layout-xhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xhdpi/activity_login.xml
@@ -24,7 +24,7 @@
             android:layout_height="match_parent"
             android:clickable="true"
             android:scaleType="fitXY"
-            android:src="@mipmap/building"
+            android:src="@drawable/building"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -34,18 +34,18 @@
             app:layout_constraintVertical_bias="0.0" />
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="210dp"
+            android:layout_height="390dp"
             android:elevation="1dp"
             android:background="@color/transparent"
             android:gravity="bottom|center"
             android:id="@+id/splashLogoLayout"
-            android:layout_marginBottom="-211dp"
+            android:layout_marginBottom="-391dp"
             android:layout_gravity="center_horizontal"
             >
             <ImageView
                 android:id="@+id/splashLogo"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="125dp"
+                android:layout_height="125dp"
                 android:src="@drawable/kharetati_white"
                 android:visibility="visible"
                 />
@@ -56,9 +56,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="0dp"
+
             android:clickable="true"
             android:scaleType="fitXY"
-            android:src="@drawable/splash"
+            android:background="@color/maroon_light"
 
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -74,7 +75,8 @@
             android:layout_marginTop="-60dp"
             android:layoutDirection="ltr"
             android:orientation="horizontal"
-            android:visibility="visible"
+            android:id="@+id/logoAndCopyRights"
+            android:visibility="invisible"
             android:weightSum="2">
 
             <LinearLayout
@@ -557,19 +559,26 @@
 
                         <LinearLayout
                             android:id="@+id/layoutMyIDUAEPass"
-                            android:layout_width="334dp"
-                            android:layout_height="50dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="76.11dp"
-                            android:layout_marginTop="0dp"
-                            android:layout_marginEnd="75.11dp"
-                            android:background="@drawable/rounded_edittext_boarder_bg"
+
                             android:gravity="center"
                             android:orientation="horizontal"
                             android:paddingStart="8dp"
                             android:paddingEnd="8dp"
 
                             android:visibility="visible">
+                            <ImageView
+                                android:layout_width="300dp"
+                                android:layout_height="35dp"
+                                android:layout_gravity="center"
+                                android:weightSum="3"
+                                android:id="@+id/imageUAE"
+                                android:src="@drawable/uaelogin_en"
+                                android:gravity="center_vertical|center_horizontal"
+                                android:orientation="horizontal"
+                                android:layout_marginBottom="0dp" />
 
                             <TextView
                                 android:id="@+id/txtMyIDLoginwith"
@@ -586,7 +595,7 @@
                                 android:text="@string/login_with"
                                 android:textColor="#231f20"
                                 android:textSize="30sp"
-                                android:visibility="visible" />
+                                android:visibility="gone" />
 
                             <ImageView
                                 android:id="@+id/imgMyIDUAEPass"
@@ -595,6 +604,7 @@
                                 android:layout_gravity="center"
                                 android:padding="8dp"
                                 android:scaleType="fitXY"
+                                android:visibility="gone"
                                 android:src="@drawable/uaepass" />
 
                             <TextView
@@ -606,10 +616,9 @@
                                 android:fontFamily="@font/dubai_font"
                                 android:gravity="center"
                                 android:text="@string/with_uaepass"
-
                                 android:textColor="#231f20"
                                 android:textSize="24sp"
-                                android:visibility="visible" />
+                                android:visibility="gone" />
                         </LinearLayout>
 
                         <TextView
