--- a/app/src/main/res/layout-xxhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_login.xml
@@ -23,7 +23,7 @@
             android:clickable="true"
             android:visibility="gone"
             android:scaleType="fitXY"
-            android:src="@mipmap/building"
+            android:src="@drawable/building"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -446,10 +446,8 @@
                     android:background="@color/faded_text_color"/>
 
                 <Button
-                    android:layout_width="224dp"
+                    android:layout_width="195dp"
                     android:layout_height="35dp"
-                    android:layout_marginStart="81.33dp"
-                    android:layout_marginEnd="79.50dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="4dp"
                     android:layout_gravity="center"
@@ -497,7 +495,7 @@
                     android:gravity="center"
                     android:id="@+id/layoutOR"
                     android:weightSum="3"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="4dp"
 
                     android:layout_marginStart="33.03dp"
                     android:layout_marginEnd="32.92dp"
@@ -535,19 +533,26 @@
                 <LinearLayout
                     android:id="@+id/layoutMyIDUAEPass"
                     android:layout_width="wrap_content"
-                    android:minWidth="220dp"
-                    android:layout_height="35.67dp"
-                    android:layout_marginStart="80.75dp"
-                    android:layout_marginEnd="80dp"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:visibility="visible"
                     android:paddingEnd="4dp"
                     android:paddingStart="4dp"
-                    android:background="@drawable/rounded_edittext_boarder_bg"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="8dp"
                     android:gravity="center"
 
                     android:layout_gravity="center">
+                    <ImageView
+                        android:layout_width="300dp"
+                        android:layout_height="35dp"
+                        android:layout_gravity="center"
+                        android:weightSum="3"
+                        android:id="@+id/imageUAE"
+                        android:src="@drawable/uaelogin_en"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="0dp"
+                        android:visibility="visible"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -561,7 +566,7 @@
                         android:text="@string/login_with"
 
                         android:paddingEnd="2dp"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:textColor="#231f20"
                         android:textSize="12.5sp" />
                     <ImageView
@@ -571,7 +576,8 @@
                         android:id="@+id/imgMyIDUAEPass"
                         android:scaleType="fitXY"
                         android:layout_gravity="center"
-                        android:src="@drawable/uaepass" />
+                        android:src="@drawable/uaepass"
+                        android:visibility="gone"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -582,9 +588,10 @@
                         android:fontFamily="@font/dubai_font"
                         android:text="@string/with_uaepass"
 
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:textColor="#231f20"
-                        android:textSize="12.5sp" />
+                        android:textSize="12.5sp"
+                        />
                 </LinearLayout>
                 <TextView
                     android:id="@+id/txtMyIDGuest"
