--- a/app/src/main/res/layout-xxxhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xxxhdpi/activity_login.xml
@@ -23,7 +23,7 @@
             android:clickable="true"
             android:visibility="gone"
             android:scaleType="fitXY"
-            android:src="@mipmap/building"
+            android:src="@drawable/building"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -32,12 +32,12 @@
             app:layout_constraintVertical_bias="0.0" />
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="250dp"
+            android:layout_height="444dp"
             android:elevation="1dp"
             android:background="@color/transparent"
             android:gravity="bottom|center"
             android:id="@+id/splashLogoLayout"
-            android:layout_marginBottom="-251dp"
+            android:layout_marginBottom="-445dp"
             android:layout_gravity="center_horizontal"
             >
             <ImageView
@@ -56,7 +56,7 @@
             android:layout_marginTop="0dp"
             android:clickable="true"
             android:scaleType="fitXY"
-            android:src="@drawable/splash"
+            android:background="@color/maroon_light"
 
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -72,7 +72,8 @@
             android:orientation="horizontal"
             android:layoutDirection="ltr"
             android:weightSum="2"
-            android:visibility="visible"
+            android:id="@+id/logoAndCopyRights"
+            android:visibility="invisible"
             android:layout_marginTop="-60dp">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -532,19 +533,27 @@
                         </LinearLayout>
                         <LinearLayout
                             android:id="@+id/layoutMyIDUAEPass"
-                            android:layout_width="186dp"
-                            android:layout_height="30.67dp"
-                            android:layout_marginStart="88.75dp"
-                            android:layout_marginEnd="88dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:orientation="horizontal"
                             android:visibility="visible"
                             android:paddingEnd="16dp"
                             android:paddingStart="16dp"
-                            android:background="@drawable/rounded_edittext_boarder_bg"
                             android:layout_marginTop="10dp"
                             android:gravity="center"
 
                             android:layout_gravity="center">
+                            <ImageView
+                                android:layout_width="300dp"
+                                android:layout_height="35dp"
+                                android:layout_gravity="center"
+                                android:weightSum="3"
+                                android:id="@+id/imageUAE"
+                                android:src="@drawable/uaelogin_en"
+                                android:gravity="center_vertical|center_horizontal"
+                                android:orientation="horizontal"
+                                android:layout_marginBottom="0dp"
+                                android:visibility="gone"/>
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
@@ -558,7 +567,7 @@
                                 android:text="@string/login_with"
 
                                 android:paddingEnd="2dp"
-                                android:visibility="visible"
+                                android:visibility="gone"
                                 android:textColor="#231f20"
                                 android:textSize="12.5sp" />
                             <ImageView
@@ -568,6 +577,7 @@
                                 android:id="@+id/imgMyIDUAEPass"
                                 android:scaleType="fitXY"
                                 android:layout_gravity="center"
+                                android:visibility="gone"
                                 android:src="@drawable/uaepass" />
                             <TextView
                                 android:layout_width="wrap_content"
@@ -579,7 +589,7 @@
                                 android:fontFamily="@font/dubai_font"
                                 android:text="@string/with_uaepass"
 
-                                android:visibility="visible"
+                                android:visibility="gone"
                                 android:textColor="#231f20"
                                 android:textSize="12.5sp" />
                         </LinearLayout>
