--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -43,16 +43,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="start"
-                    android:layout_weight="1.35">
+                    android:layout_weight="1.25">
                     <ImageView
                         android:id="@+id/imgBack"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="15dp"
                         android:layout_marginEnd="50dp"
-                        android:visibility="gone"
                         android:gravity="start"
-                        android:src="@drawable/ic_arrow_white"/>
+                        app:srcCompat="@drawable/ic_arrow_white"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -84,7 +83,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_margin="15dp"
                         android:layout_alignParentRight="true"
-                        android:src="@drawable/ic_help" />
+                        app:srcCompat="@drawable/ic_help" />
                 </LinearLayout>
             </LinearLayout>
 
