--- a/app/src/main/res/layout-hdpi/activity_login.xml
+++ b/app/src/main/res/layout-hdpi/activity_login.xml
@@ -206,6 +206,13 @@
                     android:layout_marginBottom="100dp"
                     android:background="@color/white"
                     android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="125dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:id="@+id/dubaiLogo"
+                        android:padding="2dp"
+                        android:src="@drawable/dmlogo" />
 
                     <ImageView
                         android:id="@+id/imageDubaiID"
