--- a/app/src/main/res/layout-hdpi/activity_main.xml
+++ b/app/src/main/res/layout-hdpi/activity_main.xml
@@ -50,7 +50,7 @@
                         android:textAlignment="viewStart"
                         android:textColor="@color/white"
                         android:textFontWeight="1000"
-                        android:textSize="21sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
                 <LinearLayout
@@ -68,7 +68,7 @@
                         android:id="@+id/imgRound"
                         android:gravity="center_vertical"
                         android:layout_gravity="center_vertical"
-                        android:src="@mipmap/avatar"/>
+                        android:src="@drawable/avatar"/>
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
