--- a/app/src/main/res/layout-sw720dp/activity_main.xml
+++ b/app/src/main/res/layout-sw720dp/activity_main.xml
@@ -68,7 +68,7 @@
                         android:id="@+id/imgRound"
                         android:gravity="center_vertical"
                         android:layout_gravity="center_vertical"
-                        android:src="@mipmap/avatar"/>
+                        android:src="@drawable/avatar"/>
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
