--- a/app/src/main/res/layout-xhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xhdpi/activity_login.xml
@@ -34,12 +34,12 @@
             app:layout_constraintVertical_bias="0.0" />
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="390dp"
+            android:layout_height="600dp"
             android:elevation="1dp"
             android:background="@color/transparent"
             android:gravity="bottom|center"
             android:id="@+id/splashLogoLayout"
-            android:layout_marginBottom="-391dp"
+            android:layout_marginBottom="-601dp"
             android:layout_gravity="center_horizontal"
             >
             <ImageView
@@ -207,6 +207,13 @@
                     android:layout_marginBottom="100dp"
                     android:background="@color/white"
                     android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="125dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:id="@+id/dubaiLogo"
+                        android:padding="2dp"
+                        android:src="@drawable/dmlogo" />
 
                     <ImageView
                         android:id="@+id/imageDubaiID"
