--- a/app/src/main/res/layout-xxhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_main.xml
@@ -29,7 +29,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="0dp"
 
                     android:orientation="horizontal">
                     <ImageView
@@ -53,7 +53,7 @@
                         android:textAlignment="viewStart"
                         android:textColor="@color/white"
                         android:textFontWeight="1000"
-                        android:textSize="22sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
                 <LinearLayout
@@ -61,17 +61,17 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:id="@+id/profileUsername"
-                    android:layout_marginTop="7dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
                     android:layout_marginStart="22dp"
                     android:gravity="center_vertical">
                     <ImageView
-                        android:layout_width="44dp"
-                        android:layout_height="44dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:id="@+id/imgRound"
                         android:gravity="center_vertical"
                         android:layout_gravity="center_vertical"
-                        android:src="@mipmap/avatar"/>
+                        android:src="@drawable/avatar"/>
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -87,7 +87,7 @@
                             android:fontFamily="@font/dubai_font"
                             android:gravity="center_vertical"
                             android:textColor="@color/white"
-                            android:textSize="19sp"
+                            android:textSize="18sp"
                             android:singleLine="false"
                             android:maxLines="2"
                             android:textStyle="normal" />
