--- a/app/src/main/res/layout-xxxhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xxxhdpi/activity_login.xml
@@ -198,7 +198,13 @@
                     android:layout_height="match_parent"
                     android:background="@color/white"
                     android:orientation="vertical">
-
+                    <ImageView
+                        android:layout_width="125dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:id="@+id/dubaiLogo"
+                        android:padding="2dp"
+                        android:src="@drawable/dmlogo" />
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="50dp"
