--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -43,15 +43,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="start"
-                    android:layout_weight="1.25">
+                    android:layout_weight="1.32">
                     <ImageView
                         android:id="@+id/imgBack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:layout_margin="15dp"
                         android:layout_marginEnd="50dp"
                         android:gravity="start"
-                        app:srcCompat="@drawable/ic_arrow_white"/>
+                        app:srcCompat="@drawable/back"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -66,7 +66,7 @@
                         android:text="Sample"
                         android:textStyle="bold"
                         android:textColor="@color/white"
-                        android:textSize="26dp"
+                        android:textSize="20dp"
                         android:textFontWeight="1000"
                         />
                 </LinearLayout>
