--- a/app/src/main/res/layout/fragment_request_details.xml
+++ b/app/src/main/res/layout/fragment_request_details.xml
@@ -254,35 +254,103 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layoutDirection="locale"
             android:layout_marginTop="8dp">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
+                android:weightSum="2"
                 >
                 <ImageView
                     android:layout_width="166dp"
-                    android:layout_height="42dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
                     android:src="@drawable/adhog"/>
                 <ImageView
                     android:layout_width="166dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_height="42dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
                     android:src="@drawable/al_ansari"/>
-                <ImageView
-                    android:layout_width="166dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_height="42dp"
-                    android:src="@drawable/dubai_municipality"/>
+
+            </LinearLayout>
+            <ImageView
+                android:layout_width="166dp"
+                android:layout_marginTop="16dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="8dp"
+
+                android:layout_gravity="center"
+                android:src="@drawable/dubai_municipality"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:textSize="14sp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="8dp"
+                android:textColor="#c35563"
+                android:text="@string/payment_warning"
+                android:layout_marginLeft="5dp" />
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:background="@drawable/gradient_background"
+                android:text="@string/done"
+                android:textAllCaps="false"
+                android:layout_marginTop="16dp"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="4dp"
+                android:id="@+id/done"
+                android:textColor="@color/white"
+                android:layout_gravity="bottom|center"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:id="@+id/layoutOR"
+                android:weightSum="3"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"
+                    android:background="#D38E9D"/>
+
+                <TextView
+                    android:id="@+id/txtOR"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dubai_font"
+                    android:text="@string/or"
+                    android:textAlignment="center"
+                    android:layout_marginStart="8dp"
+                    android:layout_margin="8dp"
+                    android:textColor="@color/maroon_light"
+                    android:textSize="15sp" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"
+                    android:background="#D38E9D"/>
             </LinearLayout>
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
                 android:minWidth="100dp"
                 android:textSize="16sp"
-                android:layout_margin="16dp"
+
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:gravity="center"
@@ -295,31 +363,10 @@
                 android:textColor="@color/white"
                 android:textFontWeight="800"/>
         </LinearLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:textSize="14sp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:textColor="#c35563"
-            android:text="@string/payment_warning"
-            android:layout_marginLeft="5dp" />
+
 
     </LinearLayout>
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="44dp"
-        android:background="@drawable/gradient_background"
-        android:text="@string/done"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/done"
-        android:textColor="@color/white"
-        android:layout_gravity="bottom|center"
-        />
+
 
 </LinearLayout>
 </ScrollView>
