1.Bug Fixes as on 20/09/2020 06:00am

--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -80,6 +80,7 @@
                     android:background="@drawable/edittext_feedback_background"
                     android:textDirection="locale"
                     android:singleLine="true"
+                    android:hint="abc@gmail.com"
                     android:textAlignment="viewStart"
                     android:maxLength="50"
                     android:fontFamily="@font/dubai_font"
@@ -100,6 +101,7 @@
                     android:inputType="phone"
                     android:maxLength="20"
                     android:paddingStart="5dp"
+                    android:hint="@string/mobile_number_9715xxxxxxxx"
                     android:paddingEnd="5dp"
                     android:background="@drawable/edittext_feedback_background"
                     android:textDirection="locale"
