--- a/app/src/main/res/layout-xxhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_main.xml
@@ -36,9 +36,11 @@
                         android:layout_width="24dp"
                         android:layout_height="26dp"
                         android:layout_marginEnd="5dp"
-                        android:layout_gravity="center_vertical|end"
+                        android:layout_marginStart="-7dp"
+
+                        android:layout_gravity="center_vertical|start"
                         android:id="@+id/backButton"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:src="@drawable/back"/>
                     <TextView
                         android:id="@+id/txtWelcome"
