--- a/app/src/main/res/layout/progressbar_layout.xml
+++ b/app/src/main/res/layout/progressbar_layout.xml
@@ -1,6 +1,7 @@
-<LinearLayout android:layout_width="200dp"
+<LinearLayout android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layoutDirection="locale"
+    android:gravity="center"
     android:layout_gravity="center_horizontal"
     android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -9,7 +10,7 @@
         android:id="@+id/progress"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="-16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
