1.Bug Fixes as on 21/09/2020 07:30am

--- a/app/src/main/res/layout-hdpi/activity_login.xml
+++ b/app/src/main/res/layout-hdpi/activity_login.xml
@@ -212,6 +212,7 @@
                         android:layout_gravity="center"
                         android:id="@+id/dubaiLogo"
                         android:padding="2dp"
+                        android:visibility="gone"
                         android:src="@drawable/dmlogo" />
 
                     <ImageView
@@ -694,6 +695,15 @@
                 android:gravity="center"
                 android:orientation="vertical"
                 android:visibility="gone">
+                <ImageView
+                    android:id="@+id/uaepassDubaiLogo"
+                    android:layout_width="125dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:padding="2dp"
+                    android:visibility="visible"
+                    android:src="@drawable/dmlogo" />
 
                 <ImageView
                     android:id="@+id/layoutEnableUAEPass"
