--- a/app/src/main/res/layout-xhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xhdpi/activity_login.xml
@@ -212,7 +212,7 @@
                         android:layout_height="50dp"
                         android:layout_gravity="center"
                         android:id="@+id/dubaiLogo"
-
+                        android:visibility="gone"
                         android:padding="5dp"
                         android:src="@drawable/dmlogo" />
 
@@ -693,6 +693,15 @@
                 android:layout_marginTop="8dp"
                 android:orientation="vertical"
                 android:visibility="gone">
+                <ImageView
+                    android:id="@+id/uaepassDubaiLogo"
+                    android:layout_width="125dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:padding="2dp"
+                    android:visibility="visible"
+                    android:src="@drawable/dmlogo" />
 
                 <ImageView
                     android:id="@+id/layoutEnableUAEPass"
