--- a/app/src/main/res/layout/fragment_attachment.xml
+++ b/app/src/main/res/layout/fragment_attachment.xml
@@ -65,6 +65,7 @@
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="75dp"
+              android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp">
 
             <ImageView
@@ -160,6 +161,7 @@
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="75dp"
+              android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp">
 
             <!--<LinearLayout
@@ -264,7 +266,8 @@
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="75dp"
-              android:layout_marginBottom="15dp">
+              android:layout_marginTop="10dp"
+              android:layout_marginBottom="10dp">
 
             <ImageView
                 android:id="@+id/img_company_license"
@@ -396,7 +399,9 @@
               android:background="@color/gray"/>
           <RelativeLayout
               android:layout_width="match_parent"
-              android:layout_height="75dp">
+              android:layout_height="75dp"
+              android:layout_marginTop="10dp"
+              android:layout_marginBottom="10dp">
 
             <ImageView
                 android:id="@+id/img_letter_from_owner"
