--- a/app/src/main/res/layout/fragment_find_site_plan.xml
+++ b/app/src/main/res/layout/fragment_find_site_plan.xml
@@ -10,9 +10,9 @@
     android:gravity="center"
     android:padding="20dp">
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/logo"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/logo_kharetati"
         android:layout_marginBottom="30dp"/>
     <dm.sime.com.kharetati.view.customview.CleanableEditText
         android:id="@+id/parcelId"
