--- a/app/src/main/res/layout/fragment_request_details.xml
+++ b/app/src/main/res/layout/fragment_request_details.xml
@@ -255,7 +255,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layoutDirection="locale"
+            android:layoutDirection="ltr"
             android:layout_marginTop="8dp">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -277,20 +277,20 @@
 
             </LinearLayout>
             <ImageView
-                android:layout_width="166dp"
+                android:layout_width="200dp"
                 android:layout_marginTop="16dp"
-                android:layout_height="50dp"
+                android:layout_height="42dp"
                 android:layout_marginBottom="8dp"
-
                 android:layout_gravity="center"
                 android:src="@drawable/dubai_municipality"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="start"
+                android:gravity="center"
                 android:textSize="14sp"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="8dp"
+                android:textAlignment="center"
                 android:textColor="#c35563"
                 android:text="@string/payment_warning"
                 android:layout_marginLeft="5dp" />
@@ -357,11 +357,11 @@
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/payNow"
                 android:textStyle="bold"
+
                 android:textAllCaps="false"
                 android:background="@drawable/gradient_background"
                 android:text="@string/pay_now"
-                android:textColor="@color/white"
-                android:textFontWeight="800"/>
+                android:textColor="@color/white" />
         </LinearLayout>
 
 
