1.Bug Fixes as on 22/09/2020 03:30pm

--- a/app/src/main/res/layout-sw720dp/activity_login.xml
+++ b/app/src/main/res/layout-sw720dp/activity_login.xml
@@ -671,6 +671,7 @@
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="8dp"
+                    android:layout_marginBottom="40dp"
                     android:padding="2dp"
                     android:visibility="visible"
                     android:src="@drawable/dmlogo" />
