--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -672,6 +672,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="8dp"
                     android:padding="2dp"
+                    android:layout_marginBottom="40dp"
                     android:visibility="visible"
                     android:src="@drawable/dmlogo" />
             <ImageView
