--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -65,9 +65,11 @@
                         android:layout_centerVertical="true"
                         android:text="Sample"
                         android:textStyle="bold"
+                        android:fontFamily="@font/dubai_font"
+
                         android:textColor="@color/white"
-                        android:textSize="20dp"
-                        android:textFontWeight="1000"
+                        android:textSize="20sp"
+                        android:textFontWeight="900"
                         />
                 </LinearLayout>
                 <LinearLayout
