1.Bug Fixes as on 23/09/2020 02:00am

--- a/app/src/main/res/layout-xxxhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xxxhdpi/activity_login.xml
@@ -678,6 +678,7 @@
                     android:layout_width="300dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
                     android:weightSum="3"
                     android:gravity="center_vertical|center_horizontal"
                     android:orientation="horizontal"
