--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -106,7 +106,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
                 android:id="@+id/stepper"
                 android:gravity="center"
                 android:layout_gravity="center"
