--- a/app/src/main/res/layout-xxxhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xxxhdpi/activity_main.xml
@@ -34,9 +34,12 @@
                     <ImageView
                         android:layout_width="23dp"
                         android:layout_height="25dp"
-                        android:layout_gravity="center_vertical"
-                        android:paddingStart="3dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginStart="-4dp"
+
+                        android:layout_gravity="center_vertical|start"
                         android:id="@+id/backButton"
+                        android:visibility="visible"
                         android:src="@drawable/back"/>
                     <TextView
                         android:id="@+id/txtWelcome"
@@ -50,7 +53,7 @@
                         android:textAlignment="viewStart"
                         android:textColor="@color/white"
                         android:textFontWeight="1000"
-                        android:textSize="27sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
                 <LinearLayout
@@ -58,8 +61,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:id="@+id/profileUsername"
-                    android:layout_marginTop="7dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginStart="18dp"
                     android:gravity="center_vertical">
                     <ImageView
