1.Bug Fixes as on 24/09/2020 11:30pm

--- a/app/src/main/res/layout/fragment_request_details.xml
+++ b/app/src/main/res/layout/fragment_request_details.xml
@@ -291,7 +291,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="8dp"
                 android:textAlignment="center"
-                android:textColor="#c35563"
+                android:textColor="@color/maroon_light"
                 android:text="@string/payment_warning"
                 android:layout_marginLeft="5dp" />
             <Button
