--- a/app/src/main/res/drawable/grid_background_drawable.xml
+++ b/app/src/main/res/drawable/grid_background_drawable.xml
@@ -3,6 +3,10 @@
 
     <item android:state_focused="true"
         android:state_pressed="true" android:drawable="@drawable/border_background" />
+    <item android:state_focused="false"
+        android:state_pressed="true" android:drawable="@drawable/border_background" />
+    <item android:state_focused="false"
+        android:state_pressed="false" android:drawable="@drawable/theme_background" />
 
 
 
