--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -8,6 +8,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:elevation="30dp">
 
@@ -45,8 +46,11 @@
                         android:id="@+id/logo"
                         android:layout_width="wrap_content"
                         android:layout_height="32dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="8dp"
+                        android:layout_marginStart="-48dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_gravity="center_vertical|center_horizontal"
+
                         android:scaleType="centerInside"
                         android:src="@drawable/logo_nav" />
                 </LinearLayout>
@@ -58,7 +62,8 @@
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"/>
 
 
 
